--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ input[type=submit]:hover {
   text-decoration:none;
 }
 #div1 {
-  width:1150px;
+  width:100%;
   height: 400px;
   margin:70px auto;
   position:relative;
